mycart fragment to activity

--- a/app/src/main/res/drawable/shape.xml
+++ b/app/src/main/res/drawable/shape.xml
@@ -5,6 +5,7 @@
         android:type="linear"
         android:angle="0"
         android:startColor="#84D8E2"
+        android:centerColor="@color/teal_200"
         android:endColor="#A5E6CE">
 
     </gradient>
