--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -112,7 +112,7 @@
 
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:backgroundTint="@color/teal_200"
+        android:backgroundTint="@color/teal_A700"
         android:text="Get Verification Code"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
