--- a/app/src/main/res/layout/fragment_search_medicine.xml
+++ b/app/src/main/res/layout/fragment_search_medicine.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/search_view_bar"
+    android:background="@color/white"
     tools:context=".search_medicine">
 
     <com.google.android.material.appbar.AppBarLayout
