--- a/app/src/main/res/layout/orderprescription.xml
+++ b/app/src/main/res/layout/orderprescription.xml
@@ -47,8 +47,9 @@
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/deliveryto"
-                    android:layout_width="79dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:padding="4dp"
                     android:text="@string/deliveringto"
                     android:textColor="@android:color/black" />
 
