--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -219,7 +219,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="500dp"
                 android:layout_marginTop="10sp"
-                android:layout_marginBottom="10sp">
+                android:layout_marginBottom="10sp"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="match_parent"
