--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -36,6 +36,36 @@
                 app:queryBackground="@android:color/transparent"
                 app:queryHint="Search your Medicine"/>-->
 
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:src="@drawable/shape3"
+                app:layout_constraintBottom_toTopOf="@+id/view"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <TextView
+                android:id="@+id/home_user_phn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="-50dp"
+                android:layout_marginBottom="38dp"
+                android:fontFamily="@font/ibm_bold"
+                android:inputType="textPersonName"
+                android:text="@string/username"
+                android:textColor="@android:color/black"
+                app:layout_constraintBottom_toTopOf="@+id/coursel"
+                app:layout_constraintEnd_toStartOf="@+id/cartimagebutton"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintTop_toBottomOf="@+id/imageView"
+                app:layout_constraintVertical_bias="1.0" />
+
             <ImageButton
                 android:id="@+id/cartimagebutton"
                 android:layout_width="48dp"
@@ -62,72 +92,86 @@
                 app:srcCompat="@drawable/avatar__1_" />
 
 
-            <View
+            <com.google.android.material.card.MaterialCardView
                 android:id="@+id/view"
                 android:layout_width="0dp"
                 android:layout_height="109dp"
-                android:layout_marginTop="80dp"
-                android:background="@color/teal_200"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-            <Button
-                android:id="@+id/homeupload"
-                android:layout_width="126dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="16dp"
-                android:backgroundTint="@color/teal_700"
-                android:elevation="10dp"
-                android:text="@string/ordericon"
-                android:textColor="@android:color/white"
-                android:textSize="12sp"
-                app:cornerRadius="20dp"
-                app:layout_constraintEnd_toEndOf="@+id/view"
-                app:layout_constraintTop_toTopOf="@+id/view"
-                tools:ignore="TextContrastCheck" />
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="150dp"
-                android:layout_height="27dp"
-                android:layout_alignBottom="@id/view"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="16dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp"
-                android:text="@string/orderbyprescription"
-                android:textAllCaps="false"
-                android:textColor="@android:color/black"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@id/view"
-                app:layout_constraintTop_toTopOf="@+id/view" />
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="196dp"
-                android:layout_height="55dp"
-                android:layout_marginStart="16dp"
-                android:text="@string/orderprescription"
-                android:textColor="@android:color/black"
-                app:layout_constraintEnd_toEndOf="@+id/view"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/shape"
+                android:elevation="0dp"
+                app:layout_constraintBottom_toTopOf="@+id/recyclerview_id"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/view"
-                app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-            <TextView
-                android:id="@+id/home_user_phn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="100dp"
-                android:layout_marginTop="32dp"
-                android:fontFamily="@font/ibm_bold"
-                android:inputType="textPersonName"
-                android:text="@string/username"
-                android:textColor="@android:color/black"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/coursel">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="10dp">
+
+                    <Button
+                        android:id="@+id/homeupload"
+                        android:layout_width="126dp"
+                        android:layout_height="48dp"
+                        android:layout_marginStart="17dp"
+                        android:layout_marginTop="7dp"
+                        android:layout_marginEnd="15dp"
+                        android:layout_marginBottom="54dp"
+                        android:backgroundTint="@color/light_blue"
+                        android:elevation="20dp"
+                        android:text="@string/ordericon"
+                        android:textColor="@android:color/white"
+                        android:textSize="12sp"
+                        app:cornerRadius="20dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/textView"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:ignore="TextContrastCheck" />
+
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="150dp"
+                        android:layout_height="27dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="7dp"
+                        android:layout_marginEnd="63dp"
+                        android:layout_marginBottom="4dp"
+                        android:text="@string/orderbyprescription"
+                        android:textAllCaps="false"
+                        android:textColor="@android:color/black"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toTopOf="@+id/textView"
+                        app:layout_constraintEnd_toStartOf="@+id/homeupload"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/textView"
+                        android:layout_width="196dp"
+                        android:layout_height="55dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="4dp"
+                        android:layout_marginEnd="17dp"
+                        android:layout_marginBottom="16dp"
+                        android:text="@string/orderprescription"
+                        android:textColor="@android:color/black"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/homeupload"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            </com.google.android.material.card.MaterialCardView>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerview_id"
@@ -144,9 +188,9 @@
                 android:id="@+id/coursel"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="20dp"
                 android:elevation="10dp"
                 app:iss_auto_cycle="true"
                 app:iss_corner_radius="10"
@@ -154,7 +198,7 @@
                 app:iss_period="1050"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/recyclerview_id" />
+                app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/categories"
@@ -170,7 +214,7 @@
                 app:layout_constraintBottom_toTopOf="@id/products"
                 app:layout_constraintEnd_toStartOf="parent"
                 app:layout_constraintStart_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/coursel">
+                app:layout_constraintTop_toBottomOf="@+id/view">
 
                 <LinearLayout
                     android:layout_width="match_parent"
