--- a/app/src/main/res/layout/fragment_why_prescription.xml
+++ b/app/src/main/res/layout/fragment_why_prescription.xml
@@ -5,10 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    app:behavior_hideable="true"
-    app:behavior_peekHeight="85dp"
-    android:background="@android:color/transparent"
-    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">>
+    android:background="@android:color/transparent">
 
     <ImageView
         android:id="@+id/imageView2"
@@ -57,11 +54,11 @@
             android:scaleY="2"
             android:src="@drawable/ic_baseline_navigate_before_24" />
 
-        <LinearLayout
+        <TabWidget
             android:id="@+id/dots"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="horizontal"></LinearLayout>
+            android:orientation="horizontal"/>
 
         <ImageButton
             android:id="@+id/nextbtn"
