--- a/app/src/main/res/layout/fragment_why_prescription_2.xml
+++ b/app/src/main/res/layout/fragment_why_prescription_2.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:id="@+id/why_prescription">
 
     <ImageView
         android:id="@+id/imageView4"
@@ -31,14 +32,14 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="150dp"
+            android:layout_width="80dp"
             android:layout_height="match_parent"
             app:srcCompat="@drawable/medical_prescription" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20sp"
+            android:layout_margin="15sp"
             android:orientation="vertical">
 
             <TextView
@@ -74,14 +75,14 @@ other factors" />
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="150dp"
+            android:layout_width="80dp"
             android:layout_height="match_parent"
             app:srcCompat="@drawable/gavel" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20sp"
+            android:layout_margin="15sp"
             android:orientation="vertical">
 
             <TextView
