--- a/app/src/main/res/layout/medicine_card.xml
+++ b/app/src/main/res/layout/medicine_card.xml
@@ -67,7 +67,6 @@
                     android:text="Add to cart"
                     android:textAppearance="@android:style/TextAppearance.Material.Medium"
                     android:textColor="@color/teal_200"
-                    android:visibility="visible"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:strokeColor="@color/teal_200" />
@@ -84,12 +83,12 @@
                     app:layout_constraintTop_toTopOf="@id/addtocartsearchbtn">
 
 
-                    <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    <androidx.appcompat.widget.AppCompatImageButton
                         android:id="@+id/minusbtn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/minus_24"
-                        app:fabCustomSize="32dp" />
+                        android:background="@color/transparent"
+                        android:src="@drawable/minus_24" />
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/quantitynumber"
@@ -98,14 +97,15 @@
                         android:ems="2"
                         android:gravity="center"
                         android:inputType="number"
-                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium" />
+                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
+                        android:textSize="16dp" />
 
-                    <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    <androidx.appcompat.widget.AppCompatImageButton
                         android:id="@+id/addbtn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_baseline_add_24"
-                        app:fabCustomSize="32dp" />
+                        android:background="@color/transparent"
+                        android:src="@drawable/ic_baseline_add_24" />
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
